force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/echosign_dev1__SIGN_AgreementEvent__c.object-meta.xml
<CustomObject>
    <label>Agreement Event</label>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>