force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Acting_User_Email__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Acting_User_Email__c</fullName>
    <label>Acting User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>