force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Comment2__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Comment2__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>