force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Date__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>