force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Days_Ago__c</fullName>
    <formula>now() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Ago</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>