force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>echosign_dev1__SIGN_Recipients__c</referenceTo>
    <relationshipLabel>Agreement Events</relationshipLabel>
    <relationshipName>Agreement_Events</relationshipName>
    <type>Lookup</type>
</CustomField>