force-app/main/default/objects/echosign_dev1__SIGN_AgreementEvent__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <formula>IF(
  CONTAINS(echosign_dev1__Description__c, &quot;sent out to be signed by&quot;) || CONTAINS(LOWER(echosign_dev1__Description__c), &quot;sent out for signature to&quot;), 
  &quot;SENT&quot;, 
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;sent out to be approved by&quot;) || CONTAINS(LOWER(echosign_dev1__Description__c), &quot;sent out for approval to&quot;), 
  &quot;SENT FOR APPROVAL&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;sent out to be accepted by&quot;) || CONTAINS(LOWER(echosign_dev1__Description__c), &quot;sent out for acceptance to&quot;), 
  &quot;SENT FOR ACCEPTANCE&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;sent out to be form filled by&quot;) || CONTAINS(LOWER(echosign_dev1__Description__c), &quot;sent out for filling to&quot;) || CONTAINS( LOWER(echosign_dev1__Description__c), &quot;sent out for form filling to&quot;), 
  &quot;SENT FOR FORM-FILLING&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;sent out to be acknowledged by&quot;) || CONTAINS(LOWER(echosign_dev1__Description__c), &quot;sent out for delivery to&quot;) || CONTAINS( LOWER(echosign_dev1__Description__c), &quot;sent out for acknowledgement to&quot;), 
  &quot;SENT FOR DELIVERY&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;has been signed by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;signed by&quot;),
  &quot;SIGNED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;has been approved by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;approved by&quot;),
  &quot;APPROVED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;has been accepted by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;accepted by&quot;),
  &quot;ACCEPTED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;has been form filled by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;filled by&quot;),
  &quot;FORM-FILLED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;has been acknowledged by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;delivered by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;acknowledged by&quot;),
  &quot;DELIVERED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;viewed by&quot;),
  &quot;VIEWED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;created by&quot;),
  &quot;CREATED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;cancelled by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;canceled by&quot;),
  &quot;CANCELLED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;as been rejected by&quot;) || CONTAINS(echosign_dev1__Description__c, &quot;declined by&quot;),
  &quot;DECLINED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;email bounced and could not be delivered to&quot; )|| CONTAINS(echosign_dev1__Description__c, &quot;Email bounced and was not delivered to&quot;),
  &quot;BOUNCED&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;reminder sent to&quot;),
  &quot;REMINDER&quot;,
IF(
  CONTAINS(echosign_dev1__Description__c, &quot;expired&quot;),
  &quot;EXPIRED&quot;,
&quot;OTHER&quot;)))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>